# DocuMind

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  manage.py  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml  eval.yml
agents/: constants.py  executor.py  graph.py  protocols.py  query_planner.py  schemas.py  tools.py
analysis/: admin.py  exceptions.py  models.py  selectors.py  serializers.py  services.py  tasks.py  urls.py  views.py
analysis/migrations/: 0001_initial.py  0002_analysisjob_idempotency_key.py  0003_analysisjob_indexes.py
authentication/: admin.py  apps.py  authentication.py  exceptions.py  models.py  permissions.py
authentication/management/commands/: create_api_key.py
authentication/migrations/: 0001_initial.py
core/: __init__.py  asgi.py  celery.py  constants.py  error_handler.py  exceptions.py  health.py  middleware.py  rate_limit.py  redis.py  settings.py  storage.py  task_names.py  tasks.py  throttles.py  urls.py  wsgi.py
data/eval/: qa_pairs.json
docs/: ARCHITECTURE.md  DEV_COMMANDS.md  PHASE2_REVIEW.md  PHASE3_PLAN.md  PHASE3_TEACHING.md  PRODUCT_OVERVIEW.md  PROJECT_CONTEXT.md  ROADMAP.md  TASKS.md  agent-pipeline.md  api-reference.md  architecture.md  development.md  generation.md  ingestion.md  retrieval.md  semantic-cache.md  testing.md
documents/: admin.py  constants.py  exceptions.py  models.py  selectors.py  serializers.py  services.py  tasks.py  urls.py  views.py
documents/migrations/: 0001_initial.py  0002_add_hnsw_index.py  0003_documentchunk_unique_constraint.py  0004_document_retry_count.py  0005_document_api_key.py
evaluation/: adapters.py  constants.py  datasets.py  exceptions.py  harness.py  metrics.py  protocols.py  reports.py
generation/: constants.py  llm.py  prompts.py  schemas.py  streaming.py  structured.py
ingestion/: chunkers.py  embedders.py  parsers.py  pipeline.py  protocols.py
query/: constants.py  exceptions.py  models.py  protocols.py  selectors.py  semantic_cache.py  serializers.py  services.py  urls.py  views.py
query/migrations/: 0001_initial.py  0002_add_hnsw_index.py
retrieval/: bm25.py  constants.py  hybrid.py  pipeline.py  protocols.py  reranker.py  schemas.py  vector_store.py
scripts/: benchmark.py  create_eval_docs.py
tests/: conftest.py  fakes.py
tests/evals/: run_evals.py
tests/integration/: test_document_upload.py  test_health.py
tests/unit/: test_agent_executor.py  test_agent_graph.py  test_agent_prompts.py  test_agent_schemas.py  test_agent_tools.py  test_analysis_exceptions.py  test_analysis_models.py  test_analysis_services.py  test_analysis_tasks.py  test_analysis_views.py  test_api_key_auth.py  test_error_handler.py  test_evaluation_adapters.py  test_evaluation_constants.py  test_evaluation_datasets.py  test_evaluation_exceptions.py  test_evaluation_harness.py  test_evaluation_metrics.py  test_evaluation_protocols.py  test_evaluation_reports.py  test_generation.py  test_ingestion.py  test_models.py  test_query_planner.py  test_rate_limit.py  test_retrieval.py  test_selectors.py  test_semantic_cache.py  test_serializers.py  test_structured_llm.py
