[project]
name = "documind"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    # Web framework
    "django>=4.2,<7.0",
    "djangorestframework>=3.15",
    "drf-spectacular>=0.27",
    # Configuration
    "django-environ>=0.11",
    # Database — PostgreSQL + vector search
    "psycopg2-binary>=2.9",
    "pgvector>=0.3",
    # Cache + background tasks
    "redis>=5.0",
    "celery>=5.3",
    # LLM providers
    "openai>=1.30",
    "anthropic>=0.28",
    "instructor>=1.3",
    # Agent framework
    "langchain>=0.2",
    "langgraph>=0.1",
    "langsmith>=0.1",
    # Embeddings + keyword search
    "sentence-transformers>=3.0",
    "rank-bm25>=0.2",
    # Document parsing — lower bound raised to pick up CVE-2026-33699 fix
    "pypdf>=6.9.2",
    # Production WSGI server
    "gunicorn>=22.0",
    # File storage — S3-compatible (MinIO locally, AWS S3 in production)
    "boto3>=1.34",
    "django-storages>=1.14",
    "python-json-logger>=4.0.0",
    # Explicit lower bound to pick up CVE-2026-25645 fix (transitive via huggingface-hub et al.)
    "requests>=2.33.0",
    "ragas>=0.4.3",
    "datasets>=4.8.3",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-django>=4.8",
    "pytest-cov>=5.0",
    "ruff>=0.15.5",
    "fpdf2>=2.7",
    # Pin to last unaffected release — CVE-2026-4539 affects all 2.19.x.
    # Remove upper bound once a patched release is available.
    "pygments>=2.18.0,<2.19.0",
]

# ---------------------------------------------------------------------------
# Ruff — linter + formatter
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 88

[tool.ruff.lint]
# E = pycodestyle errors, F = pyflakes, I = isort
select = ["E", "F", "I"]
ignore = ["E501"]

# ---------------------------------------------------------------------------
# pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "core.settings"
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
testpaths = ["tests"]
addopts = "-v"
